src/test/contracts/top_level_patterns/negative/jsligo/ticket_record.jsligo
type t = { b : ticket<string> }

const { b } = { b : Option.unopt(Tezos.create_ticket("one", 10 as nat)) }

type storage = ticket<string>

const main = (_ : unit, _ : storage) : [list<operation>, storage]
  => [list([]), Option.unopt (Tezos.join_tickets (b, b))]